--- a/Views/Review/Index.cshtml
+++ b/Views/Review/Index.cshtml
@@ -18,11 +18,12 @@
       <a href="@Url.Action("Index", "Home")" class="logo">
          <img src="@Url.Content("~/assets/logo_lib.png")" />
       </a>
-      <h5 class="page-type"> Review</h5>
       <nav class="navbar">
          <a href="@Url.Action("Index", "Home")"><i class="bx bx-home-heart"></i>Home</a>
          <a href="@Url.Action("Index", "AboutUs")"><i class="bx bxs-news"></i>AboutUs</a>
          <a href="@Url.Action("Index", "Contact")"><i class="bx bxs-contact"></i>Contact</a>
+            <a href="@Url.Action("Index", "WishList")"><i class="fa fa-heart"></i>WishList</a>
+            <a href="@Url.Action("Index", "Bookshelf")"><i class='bx bx-book-open'></i>Bookshelf</a>
          <a href="@Url.Page("/Account/Manage/Index", new { area = "Identity" })"><i class="bx bx-cog"></i>Settings</a>
       </nav>
       <partial name="_LoginPartial" />
