--- a/Areas/Identity/Pages/Account/Manage/Index.cshtml
+++ b/Areas/Identity/Pages/Account/Manage/Index.cshtml
@@ -11,11 +11,12 @@
    <meta charset="UTF-8" />
    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-   <title>Library - Profile</title>
+   <title>Profile</title>
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" />
    <link rel="stylesheet" href="~/css/profile.css" />
-   <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
- 
+    <link rel="icon" type="image/png" href="https://unpkg.com/boxicons@2.1.4/svg/solid/bxs-cog.svg">
+    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 
 <body class="basic-blue-body">
@@ -23,11 +24,12 @@
 		<a href="@Url.Action("Index", "Home")" class="logo">
 			<img src="@Url.Content("~/assets/logo_lib.png")" />
 		</a>
-		<h5 class="page-type">Settings</h5>
 		<nav class="navbar">
 			<a href="@Url.Action("Index", "Home")"><i class="bx bx-home-heart"></i>Home</a>
 			<a href="@Url.Action("Index", "AboutUs")"><i class="bx bxs-news"></i>AboutUs</a>
 			<a href="@Url.Action("Index", "Contact")"><i class="bx bxs-contact"></i>Contact</a>
+            <a href="@Url.Action("Index", "WishList")"><i class="fa fa-heart"></i>WishList</a>
+            <a href="@Url.Action("Index", "Bookshelf")"><i class='bx bx-book-open'></i>Bookshelf</a>
 			<a href="@Url.Page("/Account/Manage/Index", new { area = "Identity" })"><i class="bx bx-cog"></i>Settings</a>
 		</nav>
 		<partial name="_LoginPartial" />
