--- a/Views/Contact/Index.cshtml
+++ b/Views/Contact/Index.cshtml
@@ -15,6 +15,7 @@
 
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
    <link href="https://fonts.googleapis.com/css2?family=Pattaya&display=swap" rel="stylesheet">
+	<link rel="icon" type="image/png" href="https://unpkg.com/boxicons@2.1.4/svg/solid/bxs-contact.svg">
    <link rel="stylesheet" href="/css/contact.css">
    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
