--- a/Views/Request/Create.cshtml
+++ b/Views/Request/Create.cshtml
@@ -13,6 +13,10 @@
 
    <link rel="stylesheet" href="~/css/request.css" />
    <link href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet" />
+    <link rel="icon" type="image/svg+xml" href="https://unpkg.com/boxicons@2.1.4/svg/solid/bxs-file-plus.svg">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+
 </head> 
 <body class="basic-blue-body">
    <header class="header-nav">
@@ -23,6 +27,7 @@
          <a href="@Url.Action("Index", "Home")"><i class="bx bx-home-heart"></i>Home</a>
          <a href="@Url.Action("Index", "AboutUs")"><i class="bx bxs-news"></i>AboutUs</a>
          <a href="@Url.Action("Index", "Contact")"><i class="bx bxs-contact"></i>Contact</a>
+            <a href="@Url.Action("Index", "WishList")"><i class="fa fa-heart"></i>WishList</a>
          <a href="@Url.Action("Index", "Bookshelf")"><i class='bx bx-book-open'></i>Bookshelf</a>
          <a href="@Url.Page("/Account/Manage/Index", new { area = "Identity" })"><i class="bx bx-cog"></i>Settings</a>
       </nav>
@@ -47,6 +52,10 @@
                   }
                }
             </p>
+                <p style="color: red; font-weight: bold;">
+                    <strong>You have 30 days to return the book from the admin's approval date.</strong>
+                </p>
+
          </div>
          <form asp-action="Create" method="post">
             <input type="hidden" name="BookISBN" value="@ViewBag.BookISBN" />
