--- a/wwwroot/css/manage.css
+++ b/wwwroot/css/manage.css
@@ -75,11 +75,12 @@ body {
 
 /* Manage Books Styles */
 .manage-books-container {
-    margin-top: 10rem;
+    margin-top: 10rem; /* Adjust the margin to be smaller */
     display: flex;
-    justify-content: center;
+    justify-content: flex-start; /* Align content at the top */
     align-items: center;
-    height: calc(100vh - 80px); /* Subtract header height */
+    flex-direction: column;
+    padding-bottom: 2rem;
 }
 
 .manage-books-form {
