--- a/wwwroot/css/wishlist.css
+++ b/wwwroot/css/wishlist.css
@@ -30,7 +30,7 @@
 .wishlist-title {
     color: #ff6b81;
     font-size: 2em;
-    margin-top: 10rem;
+    margin-top: 13rem;
     text-align: center;
 }
 
@@ -81,7 +81,26 @@
     border-radius: 15px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
     transition: transform 0.3s ease;
+    font-weight: bold;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 18px;
+    font-style: italic;
+    font-weight: bold;
 }
+
+
+    .item-WishList h3 {
+        font-weight: bold;
+        font-size: 24px;
+        color: #007BFF;
+        text-transform: uppercase;
+        letter-spacing: 1.5px;
+        margin-bottom: 10px;
+        text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+
+
 
     .item-WishList:hover {
         transform: translateY(-5px);
@@ -128,7 +147,7 @@
         color: white;
         border-radius: 15px;
         cursor: pointer;
-        font-size: 1.2rem;
+        font-size: 1.4rem;
         transition: background 0.3s ease;
     }
 
